# linguacast

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
docs/: architecture.md  claude-code-kickoff.md  manual.md  requirements.md  session-plan.md
scripts/: build-sidecar.py
sidecar/: README.md  pyproject.toml  ruff.toml  run_sidecar.py
sidecar/app/: __init__.py  main.py  progress.py
sidecar/app/delivery/: __init__.py
sidecar/app/dub/: __init__.py  service.py
sidecar/app/jobs/: __init__.py
sidecar/app/srt/: __init__.py  writer.py
sidecar/app/stt/: __init__.py  base.py  cloud.py  dispatch.py  faster_whisper_backend.py  groq_backend.py
sidecar/app/summarize/: __init__.py  chunking.py  prompts.py  service.py
sidecar/app/translate/: __init__.py  chunker.py  client.py  formatter.py  glossary.py  router.py  service.py
sidecar/app/tts/: __init__.py  service.py  speakers.py  voicevox.py
sidecar/app/tts/cloud/: __init__.py  edge_tts_backend.py  google_tts.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  delivery.rs  deps.rs  external.rs  lib.rs  main.rs  media.rs  secrets.rs  sidecar.rs
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: api.ts
