[project]
name = "linguacast-sidecar"
version = "0.1.0"
description = "linguacast FastAPI sidecar: heavy AI compute (STT, translation, summarization, TTS, dub)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

# Heavy engine dependencies are deferred (CLAUDE.md: torch/CUDA installed lazily).
# These groups are populated in their respective sessions and installed on demand
# via `uv sync --extra <group>`.
[project.optional-dependencies]
stt = []
llm = []
tts = []
cuda = []

# Application (not a distributable package): `uv run` executes `app.main:app`
# from this directory without a build backend.
[tool.uv]
package = false
